--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <body>
         <h1>Meu título</h1>
         <h2>Meu segundo título</h2>
+        <section>
+            <header> 
+            </h2> Meu cabeçalho</h2>
+            </header>
+            <article>
+            </h3> Moda feminina </h3>
+            Lorem Ipsum - All the facts - Lipsum generator.html
+            </article>
+        </section>
     </body>
 
 
