--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </h3> Moda feminina </h3>
             Lorem Ipsum - All the facts - Lipsum generator.html
             </article>
+            Informática
         </section>
     </body>
 
