--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--Link para folha de estilo-->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/styles/reset.css">
+        <link rel="stylesheet" href="assets/styles/style.css">
+
+        <!-- Fonts-->
+         <link rel
+.open-sans-<uniquifier> {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 75;
+}
 
     </head>
     <body>
@@ -23,6 +35,10 @@
             Lorem Ipsum - All the facts - Lipsum generator.html
             </article>
             Informática
+        <article>
+        </h4> Moda Masculina </h4>
+        Segundo informática
+    </article>
         </section>
     </body>
 
